# tracker

./: .gitignore  AGENTS.md  PhaseII_TestD_0001_c4_01.json  README.md  opencode.json  prompt.md  pyproject.toml  requirements.txt  run.py  run_wavealigner.py
.opencode/plans/: 2026-05-31-tracker-replacement.md  2026-06-02-column-mutations-design.md  optimize-frame-transitions.md
tests/: conftest.py  test_autoclicker.py  test_calibration_controller.py  test_calibration_persistence.py  test_canvas_items.py  test_canvas_view.py  test_collector.py  test_coordinates.py  test_csv_export.py  test_csv_writer.py  test_data_models.py  test_data_table.py  test_decoder_worker.py  test_frame_cache.py  test_main_window.py  test_mutations.py  test_mutations_dialog.py  test_panels.py  test_persistence.py  test_pipeline.py  test_video_decoder.py  test_viewport.py
tracker/: __init__.py  __main__.py
tracker/app/: __init__.py  autoclicker.py  main_window.py  style.qss
tracker/calibration/: __init__.py  controller.py  data.py  persistence.py
tracker/canvas/: __init__.py  items.py  overlay_items.py  scene.py  view.py  viewport_state.py
tracker/coordinates/: __init__.py  pipeline.py
tracker/export/: __init__.py  csv_writer.py
tracker/mutations/: __init__.py  dialog.py  eval.py  models.py  persistence.py
tracker/panels/: __init__.py  data_table.py  plot_panel.py  series_toolbar.py
tracker/persistence/: progress.py
tracker/tracking/: __init__.py  collector.py  mark.py  series.py  state.py
tracker/video/: __init__.py  (+3 more)
wavealigner/: app.py  model.py  plotting.py  stats.py
(+18 files in other folders)
