[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tracker-replacement"
version = "0.1.0"
description = "Desktop video analysis for frame-by-frame point tracking"
requires-python = ">=3.10"
dependencies = [
    "PyQt5>=5.15",
    "opencv-python>=4.8",
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
    "pytest-mock>=3.10",
]
