[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tracker"
version = "0.1.0"
description = "Desktop video point tracker for wave-tank experiments"
readme = "prompt.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt5>=5.15",
    "opencv-python>=4.8",
    "pyqtgraph>=0.13",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-qt>=4.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tracker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyqt5"
